--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -8,7 +8,7 @@ flask-session>=0.5.0
 werkzeug>=2.3.0
 
 # Environment & Configuration
-python-dotenv==1.0.0
+python-dotenv>=1.1.1
 
 # AI & Machine Learning
 openai>=1.0.0
