Add gunicorn to requirements.txt

--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -6,6 +6,9 @@ flask==2.3.3
 flask-cors==4.0.0
 flask-session>=0.5.0
 werkzeug>=2.3.0
+gunicorn>=21.2.0
+
+
 
 # Environment & Configuration
 python-dotenv>=1.1.1
