--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -6,9 +6,10 @@ flask==2.3.3
 flask-cors==4.0.0
 flask-session>=0.5.0
 werkzeug>=2.3.0
+gunicorn>=21.2.0
 
 # Environment & Configuration
-python-dotenv==1.0.0
+python-dotenv>=1.1.1
 
 # AI & Machine Learning
 openai>=1.0.0
@@ -30,7 +31,6 @@ pydub==0.25.1
 # Document Processing
 python-docx>=1.0.0
 PyPDF2>=3.0.0
-
 # Google OAuth
 google-auth>=2.23.0
 google-auth-oauthlib>=1.1.0
