--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -13,9 +13,9 @@ python-dotenv>=1.1.1
 
 # AI & Machine Learning
 openai>=1.0.0
-openai-whisper==20231117
-sentence-transformers>=5.1.1
-huggingface_hub>=0.35.1
+# openai-whisper==20231117  # Removed: Too large for Render (700+ MB). Using OpenAI API fallback instead.
+# sentence-transformers>=5.1.1  # Removed: Not used in codebase, pulls in PyTorch
+# huggingface_hub>=0.35.1  # Removed: Only needed for sentence-transformers
 scikit-learn>=1.4.0
 numpy>=1.26.0
 
