--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -24,8 +24,8 @@ numpy>=1.26.0
 # LangChain & CrewAI
 langchain>=0.3.0
 langchain-openai>=0.2.0
-# Note: crewai version constraint relaxed to allow pip to resolve compatible version
-crewai
+crewai>=0.22.0
+pydantic>=2.0.0,<3.0.0
 
 # Voice Processing
 pyttsx3==2.90
